kustomize/dns/coredns/etcd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: system-dns
  labels:
    app: etcd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: client
    port: 2379
    targetPort: 2379
    protocol: TCP
  - name: peer
    port: 2380
    targetPort: 2380
    protocol: TCP
  selector:
    app: etcd
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-headless
  namespace: system-dns
  labels:
    app: etcd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: client
    port: 2379
    targetPort: 2379
    protocol: TCP
  - name: peer
    port: 2380
    targetPort: 2380
    protocol: TCP
  selector:
    app: etcd
